dev1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:378339051275:certificate/9a05808c-6d25-4d6e-bd38-a7f5be889cf6
    
    

  name: istio-hellow-alb
  namespace: istio-system
spec:
  ingressClassName: alb  
  rules:
  
  - http:
      paths:
      - backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80      
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
